--- a/index.html
+++ b/index.html
@@ -313,9 +313,28 @@
                     </ul>
                 </div>
             </div>
+            <div class="row" style="display: flex;
+            justify-content:  space-between;">
+                <div class="col-sm-12 animated hiding" data-animation="fadeInUp">
+                    <ul >
+                        <li class="list-inline-item">
+                            <img src="img/team/itkan.png" alt="">
+                            <div class="overlay">
+                        </li>
+                        <li class="list-inline-item">
+                            <img src="img/team/to.jpg" alt="">
+                            <div class="overlay">
+                        </li>
+                        <li class="list-inline-item">
+                            <img src="img/team/supmti.png" alt="">
+                            <div class="overlay">
+                        </li>
+                       
+                    </ul>
+                </div>
+            </div>
         </div>
     </footer>
- 
    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"></script>
