--- a/index.html
+++ b/index.html
@@ -269,11 +269,11 @@
                 <div class="row">
                     <div class="col-sm-4 animated hiding" data-animation="fadeInRight" data-delay="600">
                         <i class="fa fa-map-marker fa-3x"></i>
-                        <a href="#">plateforme des jeunes Route de l’oasis Casablanca</a>
+                        <a href="#">Plateforme des jeunes Route de l’Oasis Casablanca - Maroc</a>
                     </div>
                     <div class="col-sm-4 animated hiding" data-animation="fadeInDown" data-delay="300">
                         <i class="fa fa-phone fa-3x"></i>
-                        <a href="tel:9876543210">(212) 654-3210</a>
+                        <a href="tel:9876543210">+212 608-035715</a>
                     </div>
                     <div class="col-sm-4 animated hiding" data-animation="fadeInLeft" data-delay="600">
                         <i class="fa fa-envelope fa-3x"></i>
@@ -315,20 +315,21 @@
             </div>
             <div class="row" style="display: flex;
             justify-content:  space-between;">
-                <div class="col-sm-12 animated hiding" data-animation="fadeInUp">
+                <div class="items list-unstyled clearfix animated hiding mb-0" data-animation="fadeInUp">
                     <ul >
-                        <li class="list-inline-item">
+                        <li class="list-inline-item" style="margin-bottom: 3%; ">
                             <img src="img/team/itkan.png" alt="">
                             <div class="overlay">
                         </li>
-                        <li class="list-inline-item">
+                        <li class="list-inline-item"   style="margin-bottom: 3%;">
+                            <img src="img/team/sucre.jpg "alt="">
+                            <div class="overlay">
+                        </li>
+                        <li class="list-inline-item"  style="margin-bottom: 6%;">
                             <img src="img/team/to.jpg" alt="">
                             <div class="overlay">
                         </li>
-                        <li class="list-inline-item">
-                            <img src="img/team/supmti.png" alt="">
-                            <div class="overlay">
-                        </li>
+    
                        
                     </ul>
                 </div>
